--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   gitlab-api-extender:
-    image: {Registry.Path}/gitlab/gitlab-api-extender:latest
+    image: phoenixsystemsag/gitlab-api-extender:latest
     restart: unless-stopped
     ports:
       - 80
